<?xml version="1.0"?>
<package>
  <name>slam_navigation</name>
  <version>0.0.1</version>
  <description>Autonomous mapping and navigation for ROS Workshop, based on Clearpath's Husky demos</description>

  <author email="rob@reid.ai">Rob Reid</author>
  <maintainer email="rob@reid.ai">Rob Reid</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/ros-workshop/slam-navigation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
